# MinerFabriquer

./: .gitignore  CMakeLists.txt  README.md
Devtools/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  build.sh  cmake_install.cmake  compile_commands.json  launch-MinerFabriquer.sh  launch-TP1.sh
Devtools/.cmake/api/v1/reply/: cache-v2-2e5bdfc9580562cc9347.json  cache-v2-8e74418764257cbfb7af.json  cache-v2-de2119ec6aab02388ebc.json  cmakeFiles-v1-6e784c80ac42f3e4bc5f.json  cmakeFiles-v1-73c5f65e25bdc0ede720.json  cmakeFiles-v1-e68dd18c67c102e00ced.json  codemodel-v2-514e55480d1fd589a118.json  codemodel-v2-65ffa698d75f9deb7a54.json  codemodel-v2-87bf0ea22ac4d9ad9f08.json  codemodel-v2-a32ad763c13b3e4b5b16.json  codemodel-v2-c8f67b31e6a768a56f06.json  codemodel-v2-d7656b7eeac947bb1bd9.json  codemodel-v2-f76a4703bfb970366cb4.json  directory-external.glfw-3.1.2-Debug-245a46bec6334e09bb20.json  index-2025-04-03T11-54-39-0584.json  index-2025-04-03T14-15-31-0787.json  index-2025-04-04T09-37-35-0763.json  index-2025-04-04T12-15-40-0821.json  index-2025-04-04T12-19-50-0901.json  index-2025-04-04T12-33-54-0168.json  index-2025-04-05T08-33-20-0141.json  index-2025-04-05T09-13-46-0099.json  target-GLEW_1130-Debug-b96d932837f29e6faa10.json  target-MinerFabriquer-Debug-13b84fb6f9cd09c21cda.json  target-MinerFabriquer-Debug-33f9e671a9352726f82b.json  target-MinerFabriquer-Debug-a21bfe26383d64fee93b.json  target-MinerFabriquer-Debug-f44c7a99f7c48532e34a.json  target-TP1-Debug-1c2262bf3fa610087abd.json  target-TP1-Debug-3e6ee57a4449d0c685b8.json  target-TP1-Debug-da1b4fb1d9643f676342.json  target-boing-Debug-37ddc2dbcb6cf09916a4.json  target-boing-Debug-f2c662c11b94d66acfdf.json  target-clipboard-Debug-32f34675a7269e0392bb.json  target-clipboard-Debug-d32bad70fa12ceab36fc.json  target-cursor-Debug-2f212be145c1b3d76b3e.json  target-cursor-Debug-9d85a92bddca8f9bf57f.json  target-empty-Debug-c6e6e5096bd8dfcb943f.json  target-events-Debug-47a8cf1b26b9beeae488.json  target-events-Debug-c26dcabaff110151f0af.json  target-gamma-Debug-851b6d04bc109e43a876.json  (+28 more)
TP/Camera/: Camera.cpp  Camera.hpp  Camera_Helper.cpp  Camera_Helper.hpp
TP/Character/: Character.cpp  Character.hpp  Inventory.hpp  ItemStack.hpp
TP/Scene/: BlocTypes.cpp  BlocTypes.hpp  Character.cpp  Character.hpp  MeshObject.cpp  MeshObject.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneNode.cpp  SceneNode.hpp  Skybox.hpp  Texture.cpp  Texture.hpp  VoxelChunk.cpp  VoxelChunk.hpp
TP1/: MinerFabriquer  TP1.cpp  fragment_shader.glsl  vertex_shader.glsl
common/: fastNoiseLit.h  imageLoader.cpp  imageLoader.h
database/: Blocs.csv
main/: MinerFabriquer  main.cpp
textures/: heightmap-1024x1024.ppm  texture_atlas.ppm  texture_atlas.xcf
utils/: GLUtils.cpp  GLUtils.hpp  Ray.hpp  Transform.hpp
